@startuml data_model

title DiagFlow — Data Model Overview
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Inter
skinparam shadowing false
skinparam linetype ortho

' ─── DiagFlow Config Database (Central MSSQL df_* / Mock SQLite) ───
package "DiagFlow Schema (df_* in Central DB / plain in SQLite)" as diagflow_db #E3F2FD {

    entity "df_diagnosticians" as diag {
        * **id** : INTEGER <<PK>>
        --
        * name : TEXT / NVARCHAR(255)
        * active : INTEGER / BIT (0/1)
        can_ct : INTEGER / BIT (0/1)
        can_mri : INTEGER / BIT (0/1)
        quota_monday..sunday : INTEGER
        preferred_lab_id : INTEGER
    }

    entity "df_diagnostician_skills" as skills {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * diagnostician_id : INTEGER <<FK>>
        * exam_code : TEXT / NVARCHAR(50)
        is_preferred : INTEGER / BIT (0/1)
        --
        UNIQUE(diagnostician_id, exam_code)
    }

    entity "df_partnerships" as partners {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * issuing_doctor_id : TEXT / NVARCHAR(50) <<FK>>
        * issuing_doctor_name : TEXT / NVARCHAR(255)
        * preferred_diagnostician_id : INTEGER <<FK>>
        priority : INTEGER
        exclusive : INTEGER / BIT (0/1)
        is_active : INTEGER / BIT (0/1)
    }

    entity "df_availability" as avail {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * diagnostician_id : INTEGER <<FK>>
        * date : TEXT / NVARCHAR(10) (ISO-8601)
        * status : TEXT / NVARCHAR(50)
        is_pamakristos_oncall : INTEGER / BIT (0/1)
        notes : TEXT / NVARCHAR(500)
        --
        UNIQUE(diagnostician_id, date)
    }

    entity "df_doctors" as docs {
        * **id** : TEXT / NVARCHAR(50) <<PK>>
        --
        * name : TEXT / NVARCHAR(255)
    }

    entity "df_local_assignments (shared staged)" as local_assign {
        * **exammoreid** : INTEGER <<PK>>
        --
        * diagnostician_id : INTEGER
        * diagnostician_name : TEXT / NVARCHAR(255)
        * assigned_at : TEXT / NVARCHAR(50) (ISO-8601)
        is_auto : INTEGER / BIT (0/1)
        rule_desc : TEXT / NVARCHAR(500)
        extracode : TEXT / NVARCHAR(50)
        modality : TEXT / NVARCHAR(50)
    }

    entity "df_assignment_log (central audit)" as assign_log {
        * **exammoreid** : INTEGER <<PK>>
        --
        * diagnostician_id : INTEGER
        * assigned_at : TEXT / NVARCHAR(50) (ISO-8601)
        modality : TEXT / NVARCHAR(50)
        extracode : TEXT / NVARCHAR(50)
    }

    entity "df_pamakristos_schedule" as pam_sched {
        * **weekday** : INTEGER <<PK>> (0–6)
        --
        * diagnostician_id : INTEGER <<FK>>
    }

    entity "df_exam_routing_rules" as route_rules {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        lab_id : INTEGER
        is_pamakristos : INTEGER / BIT (0/1)
        * exam_codes : TEXT / NVARCHAR(500)
        * diagnostician_id : INTEGER <<FK>>
        description : TEXT / NVARCHAR(500)
        issuing_doctor_id : TEXT / NVARCHAR(50)
        issuing_doctor_name : TEXT / NVARCHAR(255)
        is_active : INTEGER / BIT (0/1)
    }

    entity "df_exclusive_lab_rules" as ex_labs {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * diagnostician_id : INTEGER <<FK>>
        * lab_id : INTEGER
        lab_name : TEXT / NVARCHAR(255)
        is_active : INTEGER / BIT (0/1)
    }

    entity "df_modality_quotas" as mod_quotas {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * diagnostician_id : INTEGER <<FK>>
        * modality : TEXT / NVARCHAR(50) (CT/MRI)
        * max_count : INTEGER
        is_active : INTEGER / BIT (0/1)
    }

    entity "df_system_settings" as sys_settings {
        * **key** : TEXT / NVARCHAR(100) <<PK>>
        --
        * value : TEXT / NVARCHAR(500)
    }

    entity "df_exam_dictionary" as exam_dict {
        * **code** : TEXT / NVARCHAR(50) <<PK>>
        --
        * name : TEXT / NVARCHAR(255)
        category : TEXT / NVARCHAR(50)
    }

    entity "df_admin_users" as admin_users {
        * **id** : INTEGER <<PK, IDENTITY>>
        --
        * username : TEXT / NVARCHAR(100)
        * password_hash : TEXT / NVARCHAR(255)
        * role : TEXT / NVARCHAR(50)
        * is_active : INTEGER / BIT
    }
}

' ─── Mock Slis Database (mock_slis.db) ───
package "mock_slis.db — Exam Data" as slis_db #FFF3E0 {

    entity "slis_exams" as slis_exam {
        * **exammoreid** : INTEGER <<PK>>
        --
        extracode : INTEGER
        visitid : INTEGER
        demogid : INTEGER
        fname : TEXT
        lname : TEXT
        examnumcode : INTEGER <<FK>>
        examname : TEXT
        visitdate : TEXT
        labcodeid : INTEGER
        laboratoryname : TEXT
        wcode : TEXT
        wname : TEXT
        diagnostis : INTEGER
        code : TEXT
        notes : TEXT
        category : TEXT
        slis_synced_at : TEXT
    }

    entity "exam_categories" as exam_cats {
        * **examnumcode** : INTEGER <<PK>>
        --
        * name : TEXT
        * category : TEXT (CT/MRI/MRA)
    }

    entity "diagnosticians\n(Slis personnel)" as slis_diag {
        * **PERSONELID** : INTEGER <<PK>>
        --
        DOCNAME : TEXT
    }

    entity "doctors\n(Slis doctors)" as slis_docs {
        * **CODE** : INTEGER <<PK>>
        --
        DOCNAME : TEXT
    }
}

' ─── Relationships ───
diag ||--o{ skills : "has skills"
diag ||--o{ partners : "preferred by"
diag ||--o{ avail : "availability\ncalendar"
diag ||--o{ pam_sched : "on-call\nrotation"
diag ||--o{ route_rules : "target diagnostician"
diag ||--o{ ex_labs : "bound lab"
diag ||--o{ mod_quotas : "modality limit"

partners }o--|| docs : "references\ndoctor"

slis_exam }o--|| exam_cats : "exam type\nlookup"

local_assign ..> slis_exam : "references\nexammoreid"
local_assign ..> diag : "references\ndiagnostician"
assign_log ..> diag : "tracks\nassignments"
slis_diag ..> diag : "syncs personnel\n(id, name)"
slis_docs ..> docs : "syncs doctors\n(id, name)"

@enduml
